--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
+*/.DS_Store
 cake/*
 plugins/*
 vendors/*
 app/tmp/*
+app/tmp/cache/*
+app/tmp/logs/*
+
+app/.DS_Store
+
+app/.DS_Store
+
+app/.DS_Store
